# otus-cpp-2021

./: .gitignore  CMakeLists.txt  README.md  __helpers_8h.html  __helpers_8h_source.html  __helpers_8tpp.html  annotated.html  bytes_8h.html  bytes_8h_source.html  bytes_8tpp.html  classes.html  container_8h.html  container_8h_source.html  container_8tpp.html  dir_671b48e3ecf0fd637fdb61c8fdb8b95a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_931b9b2bd6b0ecafe725fa822a73a4b9.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen.conf  files.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_1.dot  inherits.html  ip.cpp  ip.h  main.cpp  string_8h.html  string_8h_source.html  string_8tpp.html  structis__std__container.html  structis__std__container_3_01T_00_01std_1_1void__t_3_01decltype_07std_1_1declval_3_01T_01_4_07_06490a063fd99b4a1f757605e0146f65e.dot  structis__std__container_3_01T_00_01std_1_1void__t_3_01decltype_07std_1_1declval_3_01T_01_4_07_06591556eb488fc01ccfec296c38e38f2.html  structis__std__container_3_01T_00_01std_1_1void__t_3_01decltype_07std_1_1declval_3_01T_01_6_01_49124f468fbbdf104f5e0e7f2832cf4b1.html  structis__std__container_3_01T_00_01std_1_1void__t_3_01decltype_07std_1_1declval_3_01T_01_6_01_4e12eca9222ca20b142ba228c28ad5ad5.dot  structis__std__container__inherit__graph.dot  (+13 more)
1000_a_plus_b/: main.cpp
1001_reverse_square_root/: main.cpp
1022_genealogy/: main.cpp
1197_single_warrior/: main.cpp
1264_code_writing/: main.cpp
1293_enya/: main.cpp
1409_two_bandits/: main.cpp
1656_army/: main.cpp
1785_localization_difficulties/: input  main.cpp
1787_turn_to_mega/: main.cpp
1789_in_search_of_dodecahedron/: input  main.cpp
1820_uralian_beafstakes/: main.cpp
1877_bicycle_locks/: main.cpp
1880_own_numbers/: main.cpp
1885_passengers_comfort/: input  main.cpp
1931_great_team/: main.cpp
1964_chinese_language/: input  main.cpp
2001_mathematics_and_berries/: main.cpp
2012_grisha/: main.cpp
2066_simple_expression/: main.cpp
2100_wedding_feast/: main.cpp
cmd/: ip_filter_cli.cpp
include/: Command.h  Container.h  Controller.h  ICommand.h  IRunnable.h  Logger.h  app.h  dummy_array.h  ip.h  linear_allocator.h  matrix.h  print_ip.h  storage.h
old/: controller.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  (+10 more)
(+69 files in other folders)
